syntax = "proto3";
option java_multiple_files = true;

package proto.eventstore;

service EventStore{

    rpc info(InfoReq) returns (InfoResp){}

    rpc write(WriteReq) returns (WriteResp){}

    rpc read(ReadReq) returns (stream ReadResp){}

    rpc delete(DelReq) returns (DelResp){}
}

message InfoReq{
    string path = 1; // leave blank for all streams
}

message InfoResp{
    repeated StreamInfo streams = 1;
}

message StreamInfo{
    string path = 1;
    int64 size = 2;
    int64 length = 3;
}

message WriteReq{
    string path = 1;
    repeated bytes data = 2;
}

message WriteResp{
    bool success = 1;
    string error = 2;
}

message ReadReq{
    string path = 1;
    int64 start = 2;
    int64 end = 3;
    bool keepStreaming = 4;
}

message ReadResp{
    repeated bytes data = 1;
}

message DelReq{
    string changeMe = 1;
}

message DelResp{
    string changeMe = 1;
}

message EventStoreConfig{
    string path = 1;
    int32 port = 2;
}